FirstProject/force-app/main/default/objects/Contact/fields/Does_Skills_Meets_Program__c.field-meta.xml
<CustomField>
    <fullName>Does_Skills_Meets_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does Skills Meets Program?</label>
    <type>Checkbox</type>
</CustomField>