FirstProject/force-app/main/default/objects/Contact/fields/Help_Description__c.field-meta.xml
<CustomField>
    <fullName>Help_Description__c</fullName>
    <description>Field to describe what kind of help you want to receive.</description>
    <label>Help Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>