FirstProject/force-app/main/default/objects/Contact/fields/LeadRecType__c.field-meta.xml
<CustomField>
    <fullName>LeadRecType__c</fullName>
    <label>LeadRecType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>