FirstProject/force-app/main/default/objects/Contact/fields/Successful_Outreaches_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Successful_Outreaches_Percentage__c</fullName>
    <formula>Count_of_successful_Outreaches__c / Count_Of_Outreaches__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Successful Outreaches Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>