FirstProject/force-app/main/default/objects/Contact/recordTypes/Help_Program_Contact.recordType-meta.xml
<RecordType>
    <fullName>Help_Program_Contact</fullName>
    <active>true</active>
    <description>Help program record type for Contact object</description>
    <label>Help Program Contact</label>
</RecordType>