FirstProject/force-app/main/default/objects/Contact/recordTypes/Skill_Program_Contact.recordType-meta.xml
<RecordType>
    <fullName>Skill_Program_Contact</fullName>
    <active>true</active>
    <description>Skill program record type for Contact</description>
    <label>Skill Program Contact</label>
</RecordType>